# AgentIsOK

./: .env.example  .gitignore  AGENTS.md  README.md  README.zh-CN.md  TAURI_SIGNING_PRIVATE_KEY.txt  demo-cli.js  package-lock.json  package.json
.github/workflows/: release.yml
assets/: icon.icns
bridge/: hook-bridge.js
config/: defaults.json  models.json  providers.json
docs/: windows-validation-checklist.md  windows-validation-checklist.zh-CN.md
main/: config-injector.js  env-loader.js  index.js  intervention-manager.js  ipc-server.js  local-api.js  pty-manager.js  session-store.js  store.js  tray.js  watcher.js
main/providers/: anthropic.js  base-provider.js  local-claude.js  local-codex.js  local-cursor.js  local-deepseek.js  local-gemini.js  local-minimax.js  openai.js  registry.js
main/services/: forecast-service.js  local-claude-service.js  local-codex-service.js  local-cursor-service.js  local-deepseek-service.js  local-gemini-service.js  local-minimax-service.js  sync-service.js
main/storage/: usage-store.js
plugins/: opencode-plugin.js
renderer/: index.html  island.js  settings.css  settings.html  settings.js  style.css
renderer/dashboard/: dashboard.css  dashboard.js  index.html
scripts/: build-updater-manifest.js
shared/: hook-events.js  ipc-config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/plugins/: agentisok-opencode.js  hook-bridge.js  thatisok-opencode.js
src-tauri/src/: codex_provider.rs  cursor_provider.rs  hooks.rs  lib.rs  local_providers.rs  main.rs  opencode_provider.rs  providers.rs  remote_providers.rs  shortcuts.rs
src-tauri/windows/: hooks-cleanup.nsh
