[package]
name = "thatisok"
version = "1.0.0"
description = "AI agent cost and approval cockpit"
authors = ["ThatIsOk"]
edition = "2021"

[lib]
name = "thatisok_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = "s"      # optimize for size
lto = true            # link-time optimization
strip = true          # strip debug symbols
codegen-units = 1     # maximize optimization

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
base64 = "0.22"
rusqlite = { version = "0.31", features = ["bundled"] }
